# TypeInference

./: .project-settings.yml  LICENSE  Main.hs  Parser.hs  README.md  Syntax.hs  Types.hs  fold.gl  foo.gl  map.gl  project.cabal  rules.txt
Geomlab/: Parser.hs
src/Control/: Interpreter.hs
src/Control/Applicative/: Extra.hs
src/Control/Arrow/: Kleisli.hs
src/Control/Unification/: Environment.hs
src/Data/: Type.hs
src/Data/Foldable/: Extra.hs
src/Data/Type/: Contingent.hs  Inferable.hs
src/GeomLab/: Parser.hs  Syntax.hs
src/Geomlab/: Parser.hs  Syntax.hs
src/Utils/: Showable.hs
