Name:                dynamic-type-inference
Version:             1
Synopsis:            Type inference for a dynamic language
Description:         Demonstrates type infrerence on a dynamic language
License:             MIT
License-file:        LICENSE
Author:              Graham Rogers
Build-Depends:       base, parsec3-numbers
Build-Type:          Simple

Executable:          main
Main-is:             Main.hs
